essential/env-resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    ingress: internal
  name: legacy
