essential/metrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metrics-nginx-ingress
  namespace: legacy
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-Xss-Protection: 1";
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecDebugLog /tmp/modsec_debug.log
    nginx.ingress.kubernetes.io/whitelist-source-range: "118.166.26.229/32"
spec:
  ingressClassName: legacy-internal-nginx
  rules:
    - http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: internal-ingress-nginx-controller
                port:
                  number: 10254
