essential/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-nginx-ingress
  namespace: legacy
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-Xss-Protection: 1";
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecDebugLog /tmp/modsec_debug.log
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
spec:
  ingressClassName: legacy-internal-nginx
  tls:
    - hosts:
        - idiomthon.tonypa.in
        - keyboard-generator.tonypa.in
        - throw-and-hit.tonypa.in
        - turtle-soup.tonypa.in
      secretName: https-secret
  rules:
    - host: idiomthon.tonypa.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idiomthon
                port:
                  number: 8080
    - host: keyboard-generator.tonypa.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keyboard-generator
                port:
                  number: 8080
    - host: throw-and-hit.tonypa.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: throw-and-hit
                port:
                  number: 8080
    - host: turtle-soup.tonypa.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: turtle-soup
                port:
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: internal-ingress-nginx
    app.kubernetes.io/name: internal-ingress-nginx
    app.kubernetes.io/part-of: internal-ingress-nginx
    app.kubernetes.io/version: 1.3.0
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "10254"
    ### retrieve real client ip in linode
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    service.beta.kubernetes.io/linode-loadbalancer-proxy-protocol: "v2"
    ### place lb into subnet
    # service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    # service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "backend-lb-subnet"
  name: internal-ingress-nginx-controller
  namespace: legacy
spec:
  externalTrafficPolicy: Local
  ports:
  - appProtocol: http
    name: http
    port: 80
    protocol: TCP
    targetPort: http
  - appProtocol: https
    name: https
    port: 443
    protocol: TCP
    targetPort: https
  - name: prometheus
    port: 10254
    targetPort: prometheus
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: internal-ingress-nginx
    app.kubernetes.io/name: internal-ingress-nginx
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: internal-ingress-nginx
    app.kubernetes.io/name: internal-ingress-nginx
    app.kubernetes.io/part-of: internal-ingress-nginx
    app.kubernetes.io/version: 1.3.0
  name: internal-ingress-nginx-controller
  namespace: legacy
spec:
  minReadySeconds: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: internal-ingress-nginx
      app.kubernetes.io/name: internal-ingress-nginx
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "10254"
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: internal-ingress-nginx
        app.kubernetes.io/name: internal-ingress-nginx
    spec:
      containers:
      - args:
        - /nginx-ingress-controller
        - --publish-service=$(POD_NAMESPACE)/internal-ingress-nginx-controller
        - --election-id=internal-ingress-controller-leader
        - --controller-class=k8s.io/internal-ingress-nginx
        - --ingress-class=k8s.io/internal-nginx
        - --configmap=$(POD_NAMESPACE)/internal-ingress-nginx-controller
        - --default-ssl-certificate=$(POD_NAMESPACE)/https-secret
        - --watch-namespace-selector=ingress=internal
        image: registry.k8s.io/ingress-nginx/controller:v1.5.1@sha256:d1707ca76d3b044ab8a28277a2466a02100ee9f58a86af1535a3edf9323ea1b5
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /wait-shutdown
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: controller
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 10254
          name: prometheus
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 100m
            memory: 90Mi
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          runAsUser: 101
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: internal-ingress-nginx
      terminationGracePeriodSeconds: 300
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: internal-ingress-nginx
    app.kubernetes.io/name: internal-ingress-nginx
    app.kubernetes.io/part-of: internal-ingress-nginx
    app.kubernetes.io/version: 1.3.0
  name: legacy-internal-nginx
spec:
  controller: k8s.io/internal-ingress-nginx
